@@ -99,6 +99,7 @@ WHAT IS NEW?
     * plotscr.hsd, scancodes.hsi and your game's .hsi file are now all
       included automatically, so there's no need to put those "include"
       lines at the top of your scripts file [Ralph]
+    * "get/set active battle pause on all menus" [James]
 
   * Performance Fixes
     * Fixed delay when opening a menu that happened when a large number
